--- a/SalesOrder/Client/Pages/Elements.razor
+++ b/SalesOrder/Client/Pages/Elements.razor
@@ -2,7 +2,7 @@
 
 @using SalesOrder.DataContract
 
-<SfGrid TValue="Element" Toolbar="@(new List<string>() { "Add", "Edit", "Delete", "Update", "Cancel" })">
+<SfGrid TValue="Element" Toolbar="@(new List<string>() { "Add", "Edit", "Delete", "Save", "Cancel" })">
     <SfDataManager Url="@($"/api/windows/{WindowId}/elements")" Adaptor="Adaptors.WebApiAdaptor"></SfDataManager>
     <GridEditSettings AllowAdding="true" AllowEditing="true" AllowDeleting="true"></GridEditSettings>
     <GridColumns>
